<resources>
    <string name="app_name">Keap</string>
    <string name="title_activity_information">个人信息</string>
    <string name="user_name">用户名</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_register_link">没有账户？</string>
    <string name="next_step_button">确认</string>
    <string name="cancel_button">取消</string>
    <string name="pwd_not_the_same">请输入相同的密码！</string>
    <string name="resetpwd_fail">修改密码失败！</string>
    <string name="resetpwd_success">修改密码成功！</string>
    <string name="pwd_not_fit_user">旧密码输入错误！</string>
    <string name="name_not_exist">用户不存在!</string>
    <string name="account_empty">请输入用户名</string>
    <string name="pwd_empty">请输入密码</string>
    <string name="pwd_old_empty">请输入旧密码</string>
    <string name="pwd_new_empty">请输入新密码</string>
    <string name="pwd_check_empty">请再次输入新密码</string>
    <string name="name_already_exist">用户已存在</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="rememberPwd">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="inputUsername">请输入您的用户名</string>
    <string name="inputPwd">请输入您的密码</string>
    <string name="setUsername">请设定您的用户名</string>
    <string name="setPwd">请设定您的密码</string>
    <string name="confirmPwd">请确认您的密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="birth_year">
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>
    <string-array name="height">
        <item>140</item>
        <item>141</item>
        <item>142</item>
        <item>143</item>
        <item>144</item>
        <item>145</item>
        <item>146</item>
        <item>147</item>
        <item>148</item>
        <item>149</item>
        <item>150</item>
        <item>151</item>
        <item>152</item>
        <item>153</item>
        <item>154</item>
        <item>155</item>
        <item>156</item>
        <item>157</item>
        <item>158</item>
        <item>159</item>
        <item>160</item>
        <item>161</item>
        <item>162</item>
        <item>163</item>
        <item>164</item>
        <item>165</item>
        <item>166</item>
        <item>167</item>
        <item>168</item>
        <item>169</item>
        <item>170</item>
        <item>171</item>
        <item>172</item>
        <item>173</item>
        <item>174</item>
        <item>175</item>
        <item>176</item>
        <item>177</item>
        <item>178</item>
        <item>179</item>
        <item>180</item>
        <item>181</item>
        <item>182</item>
        <item>183</item>
        <item>184</item>
        <item>185</item>
        <item>186</item>
        <item>187</item>
        <item>188</item>
        <item>189</item>
        <item>190</item>
        <item>191</item>
        <item>192</item>
        <item>193</item>
        <item>194</item>
        <item>195</item>
        <item>196</item>
        <item>197</item>
        <item>198</item>
        <item>199</item>
        <item>200</item>
    </string-array>
    <string-array name="weight">
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>

    <string name="add_plan">添加计划</string>
    <string name="add_activity">添加运动</string>
    <string name="plan_name">计划名称：</string>
    <string name="edit_hint">我的计划</string>
    <string name="total">总消耗（千卡）：</string>
    <string name="add_sure">确定添加</string>
    <string name="shoubi">手臂</string>
    <string name="tuntui">臀腿</string>
    <string name="yaofu">腰腹</string>
    <string name="jianbei">肩背</string>
    <string name="lashen">拉伸</string>
    <string name="group">组</string>
    <string name="play">运动</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="save">保存</string>
    <string name="change">编辑计划</string>

    <string name="Jan">January</string>

    <string name="Feb">Feburary</string>

    <string name="Mar">March</string>

    <string name="Apr">April</string>

    <string name="May">May</string>

    <string name="Jun">June</string>

    <string name="Jul">July</string>

    <string name="Aug">August</string>

    <string name="Sep">September</string>

    <string name="Oct">October</string>

    <string name="Nov">November</string>

    <string name="Dec">December</string>

    <string name="y2013">2013</string>

    <string name="y2014">2014</string>

    <string name="y2015">2015</string>

    <string name="y2016">2016</string>

    <string name="y2017">2017</string>

    <string name="y2018">2018</string>

    <string name="y2019">2019</string>

    <string name="y2020">2020</string>

    <item name="tag_one" type="id" />

    <item name="tag_two" type="id" />

    <string name="action_settings">Settings</string>
    <string name="defaultText">\???</string>

</resources>
