<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="18dp">

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_empty"
            android:inputType="text"
            android:maxLength="10"/>

        <EditText
            android:id="@+id/old_password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd_old_empty"
            android:inputType="textPassword"
            android:maxLength="16"/>

        <EditText
            android:id="@+id/new_password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd_new_empty"
            android:inputType="textPassword"
            android:maxLength="16"/>

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pwd_check_empty"
            android:inputType="textPassword"
            android:maxLength="16"/>

        <Button
            android:id="@+id/next_step_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/next_step_button"
            android:textSize="20sp"
            android:background="@drawable/confirmbuttonstyle"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cancel_button"
            android:textSize="20sp"
            android:background="@drawable/cancelbuttonstyle"/>
    </LinearLayout>
</LinearLayout>
