<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/title3"/>


    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shoubi"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoubi"
            android:textSize="8pt"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>


    <Spinner
        android:id="@+id/shoubi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

    </Spinner>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tuntui"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuntui"
            android:textSize="8pt"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/tuntui"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

    </Spinner>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yaofu"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yaofu"
            android:textSize="8pt"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/yaofu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

    </Spinner>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/jianbei"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jianbei"
            android:textSize="8pt"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/jianbei"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

    </Spinner>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/lashen"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lashen"
            android:textSize="8pt"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>


    <Spinner
        android:id="@+id/lashen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

    </Spinner>


</LinearLayout>