<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true">

    <ImageView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/title" />
    <LinearLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:layout_margin="15dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/username_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/setUsername"
                android:inputType="text"
                android:maxLength="10"/>
            <ImageButton
                android:id="@+id/clearUsername"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/clear"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pwdRel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorBackground">

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:hint="@string/setPwd"
                android:inputType="textPassword"
                android:maxLength="16"/>

            <ImageButton
                android:id="@+id/clearPwd"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/clear"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorBackground">

            <EditText
                android:id="@+id/password_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:hint="@string/confirmPwd"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:maxLength="16"/>

            <ImageButton
                android:id="@+id/clearConfirmPwd"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/clear"
                android:layout_gravity="center"/>
        </LinearLayout>

        <Button
            android:id="@+id/next_step_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/next_step_button"
            android:textSize="20sp"
            android:background="@drawable/confirmbuttonstyle"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cancel_button"
            android:textSize="20sp"
            android:background="@drawable/cancelbuttonstyle"/>
    </LinearLayout>

</LinearLayout>